Mac: Delete the OSX.Fullscreen.ToolbarStyle histogram.

This'll make it easier for me to delete surrounding code, and I can't
find any references to it so I suspect that it's safe to prune.

Bug: 868398
Change-Id: Ib62d77f87df261200c6e6c1b821f99ed707041b9
Reviewed-on: https://chromium-review.googlesource.com/c/1343058
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609503}