chrome/browser/ui/cocoa/fullscreen/fullscreen_toolbar_controller.mm
@@ -7,7 +7,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/command_line.h"
 #include "base/feature_list.h"
-#include "base/metrics/histogram_macros.h"
 #include "chrome/browser/profiles/profile.h"
 #import "chrome/browser/ui/cocoa/fullscreen/fullscreen_menubar_tracker.h"
 #import "chrome/browser/ui/cocoa/fullscreen/fullscreen_toolbar_animation_controller.h"
@@ -150,14 +149,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 - (id<FullscreenToolbarContextDelegate>)delegate {
   return delegate_;
-}
-
-+ (void)recordToolbarStyle:(FullscreenToolbarStyle)style {
-  static constexpr int kFullscreenToolbarStyleCount =
-      (int)FullscreenToolbarStyle::TOOLBAR_LAST + 1;
-
-  UMA_HISTOGRAM_ENUMERATION("OSX.Fullscreen.ToolbarStyle", style,
-                            kFullscreenToolbarStyleCount);
 }
 
 @end
