chrome/browser/ui/views/frame/browser_non_client_frame_view_mac.mm
@@ -197,8 +197,6 @@ void BrowserNonClientFrameViewMac::UpdateFullscreenTopUI(
   // Re-layout if toolbar style changes in fullscreen mode.
   if (frame()->IsFullscreen())
     browser_view()->Layout();
-
-  [FullscreenToolbarController recordToolbarStyle:new_style];
 }
 
 bool BrowserNonClientFrameViewMac::ShouldHideTopUIForFullscreen() const {
